--- a/roles/query-packs/files/unwanted-chrome-extensions.json
+++ b/roles/query-packs/files/unwanted-chrome-extensions.json
@@ -2,79 +2,79 @@
   "platform": "windows,darwin",
   "queries": {
     "Unwanted_Chrome_Extension_BetternetVPN": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=gjknjjomckknofjidppipffbpoekiipm;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027gjknjjomckknofjidppipffbpoekiipm\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_ChangeHTTPHeader": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=ppmibgfeefcglejjlpeihfdimbkfbbnm;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027ppmibgfeefcglejjlpeihfdimbkfbbnm\u0027;",
       "interval": 3600,
       "description": "Reports from a vendor that this Chrome Extension was beaconing to a sinkhole",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_Chrometana": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=kaicbfmipfpfpjmlbpejaoaflfdnabnc;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027kaicbfmipfpfpjmlbpejaoaflfdnabnc\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_CopyFish": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=eenjdnjldapjajjofmldgmkjaienebbj;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027eenjdnjldapjajjofmldgmkjaienebbj\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/copyfish-chrome-extension-hijacked-to-show-adware/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_Giphy": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=kaicbfmipfpfpjmlbpejaoaflfdnabnc;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027kaicbfmipfpfpjmlbpejaoaflfdnabnc\u0027;",
       "interval": 3600,
       "description": "https://www.reddit.com/r/chrome/comments/6htzan/psawarning_giphy_extension_6172017_is_now_malware/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_Grammarly": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=kbfnbcaeplbcioakkpcpgfkobkghlhen;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027kbfnbcaeplbcioakkpcpgfkobkghlhen\u0027;",
       "interval": 3600,
       "description": "Has the potential to collect and exfil keystrokes from the browser - (https://www.grammarly.com/terms)",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_HolaVPN": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=gkojfkhlekighikafcpjkiklfbnlmeio;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027gkojfkhlekighikafcpjkiklfbnlmeio\u0027;",
       "interval": 3600,
       "description": "http://adios-hola.org",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_InfinityNewTab": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=dbfmnekepjoapopniengjbcpnbljalfg;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027dbfmnekepjoapopniengjbcpnbljalfg\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_SocialFixer": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=ifmhoabcaeehkljcfclfiieohkohdgbb;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027ifmhoabcaeehkljcfclfiieohkohdgbb\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_TorrentStream": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=icocmgpofpimcojhefbcfbdldkmndpgj;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027icocmgpofpimcojhefbcfbdldkmndpgj\u0027;",
       "interval": 3600,
       "description": "May violate company policies",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_TouchVPN": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=bihmplhobchoageeokmgbdihknkjbknd;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027bihmplhobchoageeokmgbdihknkjbknd\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_WebDeveloper": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=bfbameneiokkgbdmiekhjnmfkcnldhhm;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027bfbameneiokkgbdmiekhjnmfkcnldhhm\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/chrome-extension-with-over-one-million-users-hijacked-to-serve-adware/",
       "snapshot": true
     },
     "Unwanted_Chrome_Extension_WebPaint": {
-      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=emeokgokialpjadjaoeiplmnkjoaegng;",
+      "query": "SELECT * FROM users JOIN chrome_extensions USING (uid) WHERE identifier=\u0027emeokgokialpjadjaoeiplmnkjoaegng\u0027;",
       "interval": 3600,
       "description": "https://www.bleepingcomputer.com/news/security/eight-chrome-extensions-hijacked-to-deliver-malicious-code-to-4-8-million-users/",
       "snapshot": true
